# Mine

./: 404.html  README.md  game.js  gui.py  index.html  mine.py  pyproject.toml  solver.py  styles.css
src/mine/: __init__.py  __main__.py  game.py  gui.py  solver.py
